--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 locale                   : "en-US"
 title                    : "Hyojeong Son"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : 
+description              : 
 url                      : https://hyojeong-son.github.io/hyojeongson.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "hyojeong-son.github.io/hyojeongson.github.io/"
