--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
 #    url: /year-archive/
     
   - title: "CV"
-    url: /files/paper1.pdf
+    url: /files/hyojeongCV.pdf
     
 #  - title: "Guide"
 #    url: /markdown/
