--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Hyojeong Son"
   pronouns         : # example: "she/her"  
-  bio              :
+  bio              : ""
   location         : "Seattle"
   employer         : "University of Washington"
   uri              : # URL
