--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "hyojeong-son.github.io/hyojeongson.github.io/"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "hprofile.png"
   name             : "Hyojeong Son"
   pronouns         : # example: "she/her"  
   bio              : ""
