--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : 
 description              : 
 url                      : https://hyojeong-son.github.io/hyojeongson.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/hyojeongson.github.io""  # the subpath of your site, e.g. "/blog"
+baseurl                  : "/hyojeongson.github.io"  # the subpath of your site, e.g. "/blog"
 repository               : "hyojeong-son.github.io/hyojeongson.github.io/"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
