--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
 #    url: /year-archive/
     
   - title: "CV"
-    url: /files/hyojeongCV1.pdf
+    url: /files/(Hyojeong Son) CV1.pdf
     
 #  - title: "Guide"
 #    url: /markdown/
